UI: Launcher, bulky and launcher-glyph

--- a/src/UI/templates/default/Symbol/tpl.glyph.html
+++ b/src/UI/templates/default/Symbol/tpl.glyph.html
@@ -45,6 +45,7 @@
 <!-- BEGIN listoutdent --> glyphicon-listoutdent<!-- END listoutdent -->
 <!-- BEGIN filter --> glyphicon-filter<!-- END filter -->
 <!-- BEGIN collapsehorizontal --> glyphicon-triangle-left<!-- END collapsehorizontal -->
+<!-- BEGIN launch --> glyphicon-triangle-right<!-- END launch -->
 
 " aria-hidden="true"></span>
 
