UI: Input/ViewControls

--- a/src/UI/templates/default/Symbol/tpl.glyph.html
+++ b/src/UI/templates/default/Symbol/tpl.glyph.html
@@ -50,6 +50,7 @@
 <!-- BEGIN italic --> glyphicon-italic<!-- END italic -->
 <!-- BEGIN link --> glyphicon-link<!-- END link -->
 <!-- BEGIN launch --> glyphicon-plane<!-- END launch -->
+<!-- BEGIN sortation --> glyphicon-sort<!-- END sortation -->
 " aria-hidden="true"></span>
 
 <!-- BEGIN counter_status -->
