--- a/src/UI/templates/default/Table/tpl.datacell.html
+++ b/src/UI/templates/default/Table/tpl.datacell.html
@@ -5,10 +5,13 @@
 <!-- END rowselection_cell -->
 
 <!-- BEGIN cell -->
-<td class="cell {COL_TYPE}" role="gridcell" aria-colindex="{COL_INDEX}" tabindex="-1">
+<td class="cell {COL_TYPE}<!-- BEGIN highlighted --> cell-highlighted<!-- END highlighted -->" role="gridcell" aria-colindex="{COL_INDEX}" tabindex="-1">
 	{CELL_CONTENT}
 </td>
 <!-- END cell -->
+
+
+
 
 <!-- BEGIN rowaction_cell -->
 <td class="cell rowaction" role="gridcell" tabindex="-1">
