--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -13351,6 +13351,16 @@ th.c-table-data__cell {
   z-index: 3;
 }
 
+th.c-table-data__cell:after {
+  position: absolute;
+  content: "";
+  bottom: -5px;
+  width: 100%;
+  height: 5px;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.1294117647), transparent);
+  z-index: 3;
+}
+
 .c-table-data__header__resize-wrapper {
   padding: 12px 12px;
   height: 100%;
@@ -13375,6 +13385,17 @@ th.c-table-data__cell {
 .c-table-data__rowselection {
   min-width: 50px;
   text-align: center;
+}
+
+.c-table-data__rowselection:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  right: -5px;
+  height: 100%;
+  width: 5px;
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0.1294117647), transparent);
+  z-index: 2;
 }
 
 .c-table-data__multiaction-triggerer {
@@ -13404,7 +13425,8 @@ th.c-table-data__cell {
   resize: horizontal;
 }
 
-.c-table-data__cell--number .c-table-data__header__resize-wrapper {
+.c-table-data__cell--number .c-table-data__header__resize-wrapper,
+.c-table-data__cell--status .c-table-data__header__resize-wrapper {
   width: 110px;
   resize: horizontal;
 }
