--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -13424,7 +13424,7 @@ div.alert ul > li:before {
 }
 
 .c-table-data__table {
-  border: 1px solid #757575;
+  background-color: white;
 }
 
 .c-table-data__cell {
