UI: Data Table - basic mobile stacking

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -13446,6 +13446,20 @@ td.c-table-data__cell--highlighted {
   background-color: #dedede;
 }
 
+@media screen and (max-width: 768px) {
+  table.c-table-data__table,
+  .c-table-data__table thead,
+  .c-table-data__table tbody,
+  .c-table-data__table tr,
+  .c-table-data__table .c-table-data__cell {
+    width: 100%;
+    display: block;
+    border: none;
+  }
+  .c-table-data__table .c-table-data__header__resize-wrapper {
+    resize: none;
+  }
+}
 .il-toast-container {
   position: fixed;
   z-index: 19999;
