UI: Data Table - refine mobile view

--- a/templates/default/070-components/UI-framework/Table/_ui-component_table.scss
+++ b/templates/default/070-components/UI-framework/Table/_ui-component_table.scss
@@ -153,48 +153,79 @@ $il-table-presentation-details-viewcontrols-btn-bg: white;
 }
 
 //
-// basic table design
+// DATA TABLE
+// ==========
+//
+
+//
+// Media Query Breakdowns
+//
+
+// this should become a general tool
+@mixin on-screen-size($size) {
+    @if $size == small {
+        @media screen and (max-width: $il-grid-float-breakpoint-max) { @content; }
+    } @else if $size == large {
+        // note that this excludes print!
+        @media screen and (min-width: $il-grid-float-breakpoint-max + 1px) { @content; }
+    }
+}
+
+//
+// Basic Table Design
 //
 
 .c-table-data__table {
-    border: 1px solid $il-main-border-dark-color;
+    background-color: $il-main-bg;
 }
 
 .c-table-data__cell {
-    background-color: $il-main-bg;
+    background-color: $il-main-bg; // so sticky cells can cover up cells underneath them
     padding: $il-padding-large-vertical $il-padding-large-horizontal;
     border: 1px solid $il-main-border-color;
-    // border-bottom: 1px solid $il-main-border-dark-color;
 }
 
+// hover row on larger screens only
 .c-table-data__row:hover td.c-table-data__cell {
-    background-color: $il-main-darker-bg;
+    @include on-screen-size(large) {
+        background-color: $il-main-darker-bg;
+    }
 }
 
-// table header
+//
+// Table Header
+//
 
 th.c-table-data__cell {
     padding: 0; // most of the header cells get padding from the resize wrapper
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    z-index: 3;
-    &.c-table-data__header__rowselection {
-        padding: $il-padding-xxlarge-vertical $il-padding-large-horizontal;
-        text-align: center;
+    // sticky header on large screens
+    @include on-screen-size(large) {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
+        z-index: 3;
+        &.c-table-data__header__rowselection {
+            padding: $il-padding-xxlarge-vertical $il-padding-large-horizontal;
+            text-align: center;
+        }
     }
 }
-// shadow that sticks to header when sticky, because borders and box shadow are left behind in tables
+
+// shadow below header when sticky (because borders and box shadow are left behind in tables)
 th.c-table-data__cell:after {
-    position: absolute;
-    content: "";
-    left: 0;
-    bottom: -5px;
-    width: 100%;
-    height: 5px;
-    background: linear-gradient(180deg, #00000021, transparent);
-    z-index: 3;
+    @include on-screen-size(large) {
+        position: absolute;
+        content: "";
+        left: 0;
+        bottom: -5px;
+        width: 100%;
+        height: 5px;
+        background: linear-gradient(180deg, #00000021, transparent);
+        z-index: 3;
+    }
 }
+
+// Resizable Header Cell
 .c-table-data__header__resize-wrapper {
     padding: $il-padding-xxlarge-vertical $il-padding-large-horizontal;
     height: 100%;
@@ -216,26 +247,35 @@ th.c-table-data__cell:after {
         background: linear-gradient(360deg, white, transparent);
         pointer-events: none;
     }
-    // resize is later added for specific types only
+    // actual resize attribute is later added for specific column types only
 }
 
-// row selection & multiaction
+//
+// Row Selection & Multiaction
+//
 
 .c-table-data__rowselection {
     min-width: 50px; // to align checkboxes with multiaction
     text-align: center;
 }
-// shadow that sticks to header when sticky, because borders and box shadow are left behind in tables
+
+// shadow that sticks to the right of action column (because borders and box shadow are left behind and do not stick)
 .c-table-data__rowselection:after {
-    position: absolute;
-    content: "";
-    top: 0;
-    right: -5px;
-    height: 100%;
-    width: 5px;
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.1294117647), transparent);
-    z-index: 2;
+    @include on-screen-size(large) {
+        position: absolute;
+        content: "";
+        top: 0;
+        right: -5px;
+        height: 100%;
+        width: 5px;
+        background: linear-gradient(90deg, rgba(0, 0, 0, 0.1294117647), transparent);
+        z-index: 2;
+    }
 }
+
+//
+// Multiaction Dropdown below table
+//
 
 .c-table-data__multiaction-triggerer {
     width: fit-content;
@@ -254,8 +294,11 @@ th.c-table-data__cell:after {
     padding-left: $il-margin-large-horizontal;
 }
 
-// special column types
+//
+// Special Column Types
+//
 
+// Text
 .c-table-data__cell--text {
     .c-table-data__header__resize-wrapper {
         min-width: 140px;
@@ -264,6 +307,7 @@ th.c-table-data__cell:after {
     }
 }
 
+// E-Mail
 .c-table-data__cell--email {
     .c-table-data__header__resize-wrapper {
         min-width: 200px;
@@ -275,6 +319,7 @@ td.c-table-data__cell--email {
     text-align: right;
 }
 
+// Number
 .c-table-data__cell--number,
 .c-table-data__cell--status {
     .c-table-data__header__resize-wrapper {
@@ -286,6 +331,7 @@ td.c-table-data__cell--number {
     text-align: right;
 }
 
+// Date
 .c-table-data__cell--date {
     .c-table-data__header__resize-wrapper {
         // width: 110px;
@@ -294,6 +340,7 @@ td.c-table-data__cell--number {
     }
 }
 
+// Status Icon
 .c-table-data__cell--statusicon,
 .c-table-data__cell--boolean {
     .c-table-data__header__resize-wrapper {
@@ -303,28 +350,102 @@ td.c-table-data__cell--number {
     }
 }
 
-
+// Highlighted Columns
 td.c-table-data__cell--highlighted {
     background-color: $il-main-dark-bg;
 }
+// hover on larger screens only
 .c-table-data__row:hover td.c-table-data__cell--highlighted {
-    background-color: darken($il-main-darker-bg, 7%);
+    @include on-screen-size(large) {
+        background-color: darken($il-main-darker-bg, 7%);
+    }
 }
 
-// DataTable mobile view
+//
+// Data Table on Small Screens
+//
 
-@media screen and (max-width: $il-grid-float-breakpoint-max) {
-    table.c-table-data__table,
-    .c-table-data__table thead,
-    .c-table-data__table tbody,
-    .c-table-data__table tr,
-    .c-table-data__table .c-table-data__cell {
-        width: 100%;
-        display: block;
-        border: none;
-    }
-    
-    .c-table-data__table .c-table-data__header__resize-wrapper {
-        resize: none;
+// Fake Header Title repeated inside the cell, invisible by default
+.c-table-data__cell__col-title {
+    display: none;
+}
+
+.c-table-data {
+    @include on-screen-size(small) {
+        //
+        // Basic Table Design
+        //
+
+        .c-table-data__table,
+        tbody,
+        .c-table-data__cell {
+            width: 100%;
+            display: block;
+            border: none;
+        }
+        tr.c-table-data__row {
+            // using flex so we can pull row action to the top with flex order
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        // border and padding before/after every entry
+        tr.c-table-data__row {
+            border-top: 1px solid $il-main-border-color;
+            padding: $il-margin-xxxlarge-vertical 0 $il-margin-xxxlarge-vertical;
+        }
+        .c-table-data__table {
+            border-bottom: 1px solid $il-main-border-color;
+        }
+
+        //
+        // Table Header
+        //
+
+        thead {
+            display: none;
+        }
+        // Fake Header Title in Cells
+        .c-table-data__cell__col-title {
+            display: inline;
+            font-weight: bold;
+        }
+
+        //
+        // Column Specific Styling (some resets to get a card look)
+        //
+
+        td.c-table-data__cell--email,
+        td.c-table-data__cell--number {
+            text-align: inherit;
+        }
+        
+        // Highlighted Columns
+        td.c-table-data__cell--highlighted {
+            font-size: btstrp3.$font-size-h2;
+            background-color: inherit;
+        }
+
+        //
+        // Row Selection & Multiaction (pull to top)
+        //
+
+        .c-table-data__rowselection,
+        .c-table-data__rowaction {
+            order: -1;
+            width: auto;
+        }
+        .c-table-data__rowaction {
+            margin-left: auto;
+        }
+
+        //
+        // Multiaction Dropdown below table
+        //
+
+        .c-table-data__multiaction-triggerer {
+            padding-top: $il-padding-xxlarge-vertical;
+            padding-left: 0;
+        }
     }
 }
