UI Data Table Viewcontrols in Element bar

--- a/src/UI/templates/default/Input/tpl.vc_fieldselection.html
+++ b/src/UI/templates/default/Input/tpl.vc_fieldselection.html
@@ -1,14 +1,12 @@
-<div class="dropdown il-viewcontrol il-viewcontrol-fieldselection" id="{ID}">
-    <button class="btn btn-default dropdown-toggle" type="button"<!-- BEGIN disabled --> disabled="disabled"<!-- END disabled --> data-toggle="dropdown"<!-- BEGIN aria_label --> aria-label="{ARIA_LABEL}"<!-- END aria_label --> aria-haspopup="true" aria-expanded="false" aria-controls="{ID_MENU}"><span>{CONTROL_LABEL}</span></button>
+<div class="dropdown il-viewcontrol il-viewcontrol-fieldselection l-bar__element" id="{ID}">
+    <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"<!-- BEGIN aria_label --> aria-label="{ARIA_LABEL}"<!-- END aria_label --> aria-haspopup="true" aria-expanded="false" aria-controls="{ID_MENU}"><span class="caret"></span></button>
     
-    <div id="{ID_MENU}" class="dropdown-menu">
-        <ul>
-            <!-- BEGIN option -->
-            <li><input type="checkbox" value="{OPTION_VALUE}" {CHECKED} /> <span>{OPTION_LABEL}</span> </li>
-            <!-- END option -->
-        </ul>
+    <ul id="{ID_MENU}" class="dropdown-menu">
+        <!-- BEGIN option -->
+        <li><input type="checkbox" value="{OPTION_VALUE}" {CHECKED} /> <span>{OPTION_LABEL}</span> </li>
+        <!-- END option -->
         {BUTTON}
-    </div>
+    </ul>
 
     <div class="il-viewcontrol-value">
         <input  type="hidden" name="{NAME}" value="{VALUE}" />
