--- a/src/UI/templates/default/Input/tpl.vc_pagination.html
+++ b/src/UI/templates/default/Input/tpl.vc_pagination.html
@@ -1,28 +1,24 @@
-<div class="il-viewcontrol il-viewcontrol-pagination" id="{ID}">
+<div class="il-viewcontrol il-viewcontrol-pagination l-bar__element" id="{ID}">
     <!-- BEGIN section_part -->
     {LEFT}
-    <div class="dropdown">
+    <div class="dropdown il-viewcontrol-pagination__pages">
         <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"<!-- BEGIN aria_label_offset --> aria-label="{ARIA_LABEL_OFFSET}"<!-- END aria_label_offset --> aria-haspopup="true" aria-expanded="false" aria-controls="{ID_MENU_OFFSET}">{CONTROL_LABEL_OFFSET} <span class="caret"></span></button>
-        <div id="{ID_MENU_OFFSET}" class="dropdown-menu">
-            <ul>
-                <!-- BEGIN option_offset -->
-                <li>{OPTION_OFFSET}</li>
-                <!-- END option_offset -->
-            </ul>
-        </div>
+        <ul id="{ID_MENU_OFFSET}" class="dropdown-menu">
+            <!-- BEGIN option_offset -->
+            <li>{OPTION_OFFSET}</li>
+            <!-- END option_offset -->
+        </ul>
     </div>
     {RIGHT}
     <!-- END section_part -->
 
-    <div class="dropdown">
-        <button class="btn btn-default dropdown-toggle" type="button"<!-- BEGIN disabled_limit --> disabled="disabled"<!-- END disabled_limit --> data-toggle="dropdown"<!-- BEGIN aria_label_limit --> aria-label="{ARIA_LABEL_LIMIT}"<!-- END aria_label_limit --> aria-haspopup="true" aria-expanded="false" aria-controls="{ID_MENU_LIMIT}"><span>{CONTROL_LABEL_LIMIT}</span></button>
-        <div id="{ID_MENU_LIMIT}" class="dropdown-menu">
-            <ul>
-                <!-- BEGIN option_limit -->
-                <li>{OPTION_LIMIT}</li>
-                <!-- END option_limit -->
-            </ul>
-        </div>
+    <div class="dropdown il-viewcontrol-pagination__num-of-pages">
+        <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"<!-- BEGIN aria_label_limit --> aria-label="{ARIA_LABEL_LIMIT}"<!-- END aria_label_limit --> aria-haspopup="true" aria-expanded="false" aria-controls="{ID_MENU_LIMIT}"><span class="caret"></span></button>
+        <ul id="{ID_MENU_LIMIT}" class="dropdown-menu">
+            <!-- BEGIN option_limit -->
+            <li>{OPTION_LIMIT}</li>
+            <!-- END option_limit -->
+        </ul>
     </div>
 
     <div class="il-viewcontrol-value">
