--- a/src/UI/templates/default/Input/tpl.vc_sortation.html
+++ b/src/UI/templates/default/Input/tpl.vc_sortation.html
@@ -1,13 +1,11 @@
-<div class="dropdown il-viewcontrol il-viewcontrol-sortation" id="{ID}">
-    <button class="btn btn-default dropdown-toggle" type="button"<!-- BEGIN disabled --> disabled="disabled"<!-- END disabled --> data-toggle="dropdown"<!-- BEGIN aria_label --> aria-label="{ARIA_LABEL}"<!-- END aria_label --> aria-haspopup="true" aria-expanded="false" aria-controls="{ID_MENU}"><span>{CONTROL_LABEL}</span></button>
+<div class="dropdown il-viewcontrol il-viewcontrol-sortation l-bar__element" id="{ID}">
+    <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"<!-- BEGIN aria_label --> aria-label="{ARIA_LABEL}"<!-- END aria_label --> aria-haspopup="true" aria-expanded="false" aria-controls="{ID_MENU}"><span class="caret"></span></button>
     
-    <div id="{ID_MENU}" class="dropdown-menu">
-        <ul>
-            <!-- BEGIN option -->
-            <li>{OPTION}</li>
-            <!-- END option -->
-        </ul>
-    </div>
+    <ul id="{ID_MENU}" class="dropdown-menu">
+        <!-- BEGIN option -->
+        <li>{OPTION}</li>
+        <!-- END option -->
+    </ul>
 
     <div class="il-viewcontrol-value">
         <input  type="hidden" name="{NAME}" value="{VALUE}" />
