UI/ViewControl: add option-id to fieldselection

--- a/src/UI/templates/default/Input/tpl.vc_fieldselection.html
+++ b/src/UI/templates/default/Input/tpl.vc_fieldselection.html
@@ -3,7 +3,7 @@
     
     <ul id="{ID_MENU}" class="dropdown-menu">
         <!-- BEGIN option -->
-        <li><input type="checkbox" value="{OPTION_VALUE}" {CHECKED} /> <span>{OPTION_LABEL}</span> </li>
+        <li><input type="checkbox" value="{OPTION_VALUE}" id="{OPTION_ID}" {CHECKED} /> <label for="{OPTION_ID}">{OPTION_LABEL}</label> </li>
         <!-- END option -->
         {BUTTON}
     </ul>
