UI/ViewControl: add role=none to hidden inputs, fix tests

--- a/src/UI/templates/default/Input/tpl.vc_pagination.html
+++ b/src/UI/templates/default/Input/tpl.vc_pagination.html
@@ -21,7 +21,7 @@
         </ul>
     </div>
 
-    <div class="il-viewcontrol-value hidden">
+    <div class="il-viewcontrol-value hidden" role="none">
         <input  type="hidden" name="{NAME}" value="{VALUE}" />
     </div>
 </div>
