--- a/src/UI/templates/default/Input/tpl.vc_sortation.html
+++ b/src/UI/templates/default/Input/tpl.vc_sortation.html
@@ -7,7 +7,7 @@
         <!-- END option -->
     </ul>
 
-    <div class="il-viewcontrol-value">
+    <div class="il-viewcontrol-value" role="none">
         <input  type="hidden" name="{NAME}" value="{VALUE}" />
     </div>
 </div>
