--- a/src/UI/templates/default/Input/tpl.vc_fieldselection.html
+++ b/src/UI/templates/default/Input/tpl.vc_fieldselection.html
@@ -8,7 +8,7 @@
         {BUTTON}
     </ul>
 
-    <div class="il-viewcontrol-value">
+    <div class="il-viewcontrol-value" role="none">
         <input  type="hidden" name="{NAME}" value="{VALUE}" />
     </div>
 
