UI: Entity/EntityListing/PropertyListing, tests

--- a/src/UI/templates/default/Entity/tpl.entity.html
+++ b/src/UI/templates/default/Entity/tpl.entity.html
@@ -1,45 +1,47 @@
-<!-- BEGIN blocking_conditions -->
-<div>{BLOCKING_CONDITIONS}</div>
-<!-- END blocking_conditions -->
+<div class="il-entity-representation">
 
-<!-- BEGIN actions -->
-<div>{ACTIONS}</div>
-<!-- END actions -->
+	<!-- BEGIN blocking_conditions -->
+	<div>{BLOCKING_CONDITIONS}</div>
+	<!-- END blocking_conditions -->
 
-<!-- BEGIN secondary_id -->
-<div>{SECONDARY_IDENTIFIER}</div>
-<!-- END secondary_id -->
+	<!-- BEGIN actions -->
+	<div>{ACTIONS}</div>
+	<!-- END actions -->
 
-<!-- BEGIN featured -->
-<div>{FEATURES}</div>
-<!-- END featured -->
+	<!-- BEGIN secondary_id -->
+	<div>{SECONDARY_IDENTIFIER}</div>
+	<!-- END secondary_id -->
 
-<!-- BEGIN primary_id -->
-<div>{PRIMARY_IDENTIFIER}</div>
-<!-- END primary_id -->
+	<!-- BEGIN featured -->
+	<div>{FEATURES}</div>
+	<!-- END featured -->
 
-<!-- BEGIN personal_status -->
-<div>{PERSONAL_STATUS}</div>
-<!-- END personal_status -->
+	<!-- BEGIN primary_id -->
+	<div>{PRIMARY_IDENTIFIER}</div>
+	<!-- END primary_id -->
 
-<!-- BEGIN main_details -->
-<div>{MAIN_DETAILS}</div>
-<!-- END main_details -->
+	<!-- BEGIN personal_status -->
+	<div>{PERSONAL_STATUS}</div>
+	<!-- END personal_status -->
 
-<!-- BEGIN availability -->
-<div>{AVAILABILITY}</div>
-<!-- END availability -->
+	<!-- BEGIN main_details -->
+	<div>{MAIN_DETAILS}</div>
+	<!-- END main_details -->
 
-<!-- BEGIN details -->
-<div>{DETAILS}</div>
-<!-- END details -->
+	<!-- BEGIN availability -->
+	<div>{AVAILABILITY}</div>
+	<!-- END availability -->
 
-<!-- BEGIN reactions -->
-<div>{REACTIONS}</div>
-<!-- END reactions -->
+	<!-- BEGIN details -->
+	<div>{DETAILS}</div>
+	<!-- END details -->
 
-<!-- BEGIN prio_reactions -->
-<div>{PRIO_REACTIONS}</div>
-<!-- END prio_reactions -->
+	<!-- BEGIN reactions -->
+	<div>{REACTIONS}</div>
+	<!-- END reactions -->
 
+	<!-- BEGIN prio_reactions -->
+	<div>{PRIO_REACTIONS}</div>
+	<!-- END prio_reactions -->
 
+</div>
