UI: entity layout

--- a/src/UI/templates/default/Entity/tpl.entity.html
+++ b/src/UI/templates/default/Entity/tpl.entity.html
@@ -1,45 +1,45 @@
-<!-- BEGIN blocking_conditions -->
-<div>{BLOCKING_CONDITIONS}</div>
-<!-- END blocking_conditions -->
+<div class="c-entity __container">
+    <!-- BEGIN blocking_conditions -->
+    <div class="c-entity __blocking-conditions">{BLOCKING_CONDITIONS}</div>
+    <!-- END blocking_conditions -->
 
-<!-- BEGIN actions -->
-<div>{ACTIONS}</div>
-<!-- END actions -->
+    <!-- BEGIN actions -->
+    <div class="c-entity __actions">{ACTIONS}</div>
+    <!-- END actions -->
 
-<!-- BEGIN secondary_id -->
-<div>{SECONDARY_IDENTIFIER}</div>
-<!-- END secondary_id -->
+    <!-- BEGIN secondary_id -->
+    <div class="c-entity __secondary-identifier">{SECONDARY_IDENTIFIER}</div>
+    <!-- END secondary_id -->
 
-<!-- BEGIN featured -->
-<div>{FEATURES}</div>
-<!-- END featured -->
+    <!-- BEGIN primary_id -->
+    <div class="c-entity __primary-identifier">{PRIMARY_IDENTIFIER}</div>
+    <!-- END primary_id -->
 
-<!-- BEGIN primary_id -->
-<div>{PRIMARY_IDENTIFIER}</div>
-<!-- END primary_id -->
+    <!-- BEGIN featured -->
+    <div class="c-entity __featured">{FEATURES}</div>
+    <!-- END featured -->
 
-<!-- BEGIN personal_status -->
-<div>{PERSONAL_STATUS}</div>
-<!-- END personal_status -->
+    <!-- BEGIN personal_status -->
+    <div class="c-entity __personal-status">{PERSONAL_STATUS}</div>
+    <!-- END personal_status -->
 
-<!-- BEGIN main_details -->
-<div>{MAIN_DETAILS}</div>
-<!-- END main_details -->
+    <!-- BEGIN main_details -->
+    <div class="c-entity __main-details">{MAIN_DETAILS}</div>
+    <!-- END main_details -->
 
-<!-- BEGIN availability -->
-<div>{AVAILABILITY}</div>
-<!-- END availability -->
+    <!-- BEGIN availability -->
+    <div class="c-entity __availability">{AVAILABILITY}</div>
+    <!-- END availability -->
 
-<!-- BEGIN details -->
-<div>{DETAILS}</div>
-<!-- END details -->
+    <!-- BEGIN details -->
+    <div class="c-entity __details">{DETAILS}</div>
+    <!-- END details -->
 
-<!-- BEGIN reactions -->
-<div>{REACTIONS}</div>
-<!-- END reactions -->
+    <!-- BEGIN reactions -->
+    <div class="c-entity __reactions">{REACTIONS}</div>
+    <!-- END reactions -->
 
-<!-- BEGIN prio_reactions -->
-<div>{PRIO_REACTIONS}</div>
-<!-- END prio_reactions -->
-
-
+    <!-- BEGIN prio_reactions -->
+    <div class="c-entity __featured-reactions">{PRIO_REACTIONS}</div>
+    <!-- END prio_reactions -->
+</div>
