UI: entity styling & example

--- a/src/UI/templates/default/Listing/tpl.propertylisting.html
+++ b/src/UI/templates/default/Listing/tpl.propertylisting.html
@@ -1,10 +1,10 @@
-<div class="il-listing-property">
+<div class="l-bar__container c-listing-property">
     <!-- BEGIN property -->
-    <div class="il-listing-property__property">
+    <div class="l-bar__group c-listing-property__property">
         <!-- BEGIN label -->
-        <span class="il-listing-property__propertylabel">{LABEL}</span>
+        <span class="l-bar__element c-listing-property__propertylabel">{LABEL}</span>
         <!-- END label -->
-        <span class="il-listing-property__propertyvalue">{VALUE}</span>
+        <span class="l-bar__element c-listing-property__propertyvalue">{VALUE}</span>
     </div>
     <!-- END property -->
 </div>
