--- a/templates/default/070-components/_index.scss
+++ b/templates/default/070-components/_index.scss
@@ -25,6 +25,7 @@
 @use "./UI-framework/Item/_ui-component_item.scss";
 @use "./UI-framework/Layout/_ui-component_layout.scss";
 @use "./UI-framework/Link/_ui-component_link.scss";
+@use "./UI-framework/Listing/ui-component_properties";
 @use "./UI-framework/Listing/_ui-component_characteristic_value.scss";
 @use "./UI-framework/Listing/_ui-component_workflow.scss";
 @use "./UI-framework/MainControls/_ui-component_maincontrols.scss";
