--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -8440,6 +8440,36 @@ table.mceToolbar tbody, table.mceToolbar tr, table.mceToolbar td {
 }
 
 /* Responsive container system from Bootstrap 5 has been removed */
+.l-bar__container,
+.l-bar__group {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.l-bar__container {
+  margin-bottom: -9px;
+}
+.l-bar__container.l-bar__container--space-between {
+  justify-content: space-between;
+}
+
+.l-bar__group {
+  margin-right: 15px;
+}
+.l-bar__group:last-child {
+  margin-right: 0;
+}
+
+.l-bar__element {
+  margin-right: 3px;
+  margin-bottom: 9px;
+}
+.l-bar__element:last-child {
+  margin-right: 0;
+}
+
 html, body {
   height: 100%;
   overflow: hidden;
@@ -9644,13 +9674,22 @@ ul.dropdown-menu > li > .btn:hover, ul.dropdown-menu > li > .btn:focus {
 
 .c-entity.__container {
   display: grid;
-  grid-template-areas: "f-blocking f-blocking f-blocking f-blocking actions" "second-id f-prop f-prop f-prop f-prop" "second-id prim-id prim-id prim-id prim-id" "second-id status status status status" "second-id f-details f-details f-details f-details" "second-id availab availab availab availab" "second-id details details details details" "second-id reaction reaction f-reaction f-reaction";
+  grid-template-areas: "f-blocking f-blocking f-blocking f-blocking actions" "second-id f-prop f-prop f-prop actions" "second-id prim-id prim-id prim-id actions" "second-id status status status status" "second-id f-details f-details f-details f-details" "second-id availab availab availab availab" "second-id details details details details" "second-id reaction reaction f-reaction f-reaction";
   grid-template-columns: min-content auto auto min-content min-content;
+  border: 1px solid #dddddd;
+  background-color: white;
+  padding: 4.5px 7.5px;
+}
+.c-entity.__container > *:not(:empty) {
+  padding: 4.5px 7.5px;
 }
 .c-entity.__blocking-conditions {
   grid-area: f-blocking;
+  font-size: 1.115rem;
 }
 .c-entity.__actions {
+  display: flex;
+  justify-content: end;
   grid-area: actions;
 }
 .c-entity.__secondary-identifier {
@@ -9658,9 +9697,12 @@ ul.dropdown-menu > li > .btn:hover, ul.dropdown-menu > li > .btn:focus {
 }
 .c-entity.__primary-identifier {
   grid-area: prim-id;
+  font-weight: 600;
+  font-size: 1.5rem;
 }
 .c-entity.__featured {
   grid-area: f-prop;
+  font-size: 1.115rem;
 }
 .c-entity.__personal-status {
   grid-area: status;
@@ -9675,14 +9717,13 @@ ul.dropdown-menu > li > .btn:hover, ul.dropdown-menu > li > .btn:focus {
   grid-area: details;
 }
 .c-entity.__reactions {
-  display: flex;
-  flex-direction: row;
   grid-area: reaction;
 }
 .c-entity.__featured-reactions {
   display: flex;
-  flex-direction: row;
+  justify-content: end;
   grid-area: f-reaction;
+  min-width: max-content;
 }
 
 .il-input-tag {
@@ -10915,6 +10956,14 @@ footer {
 }
 .il-link.link-bulky .bulky-label {
   color: #161616;
+}
+
+.c-listing-property__propertylabel:after {
+  content: ":";
+}
+
+.c-listing-property + .c-listing-property {
+  margin-top: 6px;
 }
 
 /* common css for characteristic value listing */
