UI: Entity, add class for secondary identifier type

--- a/src/UI/templates/default/Entity/tpl.entity.html
+++ b/src/UI/templates/default/Entity/tpl.entity.html
@@ -1,4 +1,5 @@
-<div class="c-entity __container">
+<div class="c-entity __container<!-- BEGIN secondid_string --> __with-secondary-identifier--string<!-- END secondid_string --><!-- BEGIN secondid_shy --> __with-secondary-identifier--shy<!-- END secondid_shy --><!-- BEGIN secondid_link --> __with-secondary-identifier--shylink<!-- END secondid_link --><!-- BEGIN secondid_symbol --> __with-secondary-identifier--symbol<!-- END secondid_symbol --><!-- BEGIN secondid_image --> __with-secondary-identifier--image<!-- END secondid_image -->
+">
     <!-- BEGIN blocking_conditions -->
     <div class="c-entity __blocking-conditions">{BLOCKING_CONDITIONS}</div>
     <!-- END blocking_conditions -->
