UI: Entity, sec-ident type width, fixed dropdown

--- a/src/UI/templates/default/Entity/tpl.entity.html
+++ b/src/UI/templates/default/Entity/tpl.entity.html
@@ -1,5 +1,4 @@
-<div class="c-entity __container<!-- BEGIN secondid_string --> __with-secondary-identifier--string<!-- END secondid_string --><!-- BEGIN secondid_shy --> __with-secondary-identifier--shy<!-- END secondid_shy --><!-- BEGIN secondid_link --> __with-secondary-identifier--shylink<!-- END secondid_link --><!-- BEGIN secondid_symbol --> __with-secondary-identifier--symbol<!-- END secondid_symbol --><!-- BEGIN secondid_image --> __with-secondary-identifier--image<!-- END secondid_image -->
-">
+<div class="c-entity __container">
     <!-- BEGIN blocking_conditions -->
     <div class="c-entity __blocking-conditions">{BLOCKING_CONDITIONS}</div>
     <!-- END blocking_conditions -->
@@ -9,7 +8,8 @@
     <!-- END actions -->
 
     <!-- BEGIN secondary_id -->
-    <div class="c-entity __secondary-identifier">{SECONDARY_IDENTIFIER}</div>
+    <div class="c-entity __secondary-identifier<!-- BEGIN secondid_string --> --string<!-- END secondid_string --><!-- BEGIN secondid_shy --> --shy<!-- END secondid_shy --><!-- BEGIN secondid_link --> --shylink<!-- END secondid_link --><!-- BEGIN secondid_symbol --> --symbol<!-- END secondid_symbol --><!-- BEGIN secondid_image --> --image<!-- END secondid_image -->
+    ">{SECONDARY_IDENTIFIER}</div>
     <!-- END secondary_id -->
 
     <!-- BEGIN primary_id -->
