UI/Layout/Alignment: mock CSS

--- a/src/UI/templates/default/Layout/tpl.alignment_horizontal.html
+++ b/src/UI/templates/default/Layout/tpl.alignment_horizontal.html
@@ -1,6 +1,6 @@
-<div class="LAYOUT horizontal<!-- BEGIN forced --> forced<!-- END forced -->">
+<div class="c-layout-alignment__horizontal<!-- BEGIN forced --> c-layout-alignment--forced<!-- END forced -->">
 	<!-- BEGIN group -->
-	<div class=group>
+	<div class=c-layout-alignment__group>
 		{CONTENT}
 	</div>
 	<!-- END group -->
