UI/Table/Presentation and Layout/Alignment: add more options to content, add leading Icon

--- a/src/UI/templates/default/Table/tpl.presentationrow.html
+++ b/src/UI/templates/default/Table/tpl.presentationrow.html
@@ -18,6 +18,7 @@
 		<div class="il-table-presentation-row-header">
 
 			<h4 class="il-table-presentation-row-header-headline" onClick="$(document).trigger('{TOGGLE_SIGNAL}');">
+				{SYMBOL}
 				{HEADLINE}
 				<!-- BEGIN subheadline -->
 				<br />
