UI/Layout/Alignment flex styling, example blocks

--- a/templates/default/070-components/UI-framework/Layout/_ui-component_alignment.scss
+++ b/templates/default/070-components/UI-framework/Layout/_ui-component_alignment.scss
@@ -1,20 +1,26 @@
-.c-layout-alignment__horizontal{
-	
+@use "../../../010-settings/" as *;
+@use "../../../050-layout/basics/" as *;
+
+.c-layout-alignment {
 	display: flex;
 	width: 100%;
-
+	gap: $il-margin-large-horizontal;
+	&--horizontal {
+		flex-wrap: wrap;
+	}
+	&--nowrap.c-layout-alignment--horizontal  {
+		flex-wrap: nowrap;
+	}
 	.c-layout-alignment__group {
-		width: 100%;
-		float: left;
-		border: 1px solid black;
-
+		display: flex;
+		flex: 1 1 0px; // flex-basis 0px needed for equal distribution of columns
+		flex-wrap: wrap;
+		gap: $il-margin-small-horizontal;
+		@media screen and (max-width: $il-grid-float-breakpoint-max) {
+			flex-basis: 100%;
+		}
 		.c-layout-alignment__block {
-			float: left;
-			border: 1px solid black;
+			flex-grow: 1;
 		}
 	}
-}
-
-.c-layout-alignment__horizontal.c-layout-alignment--forced{
-
 }
