--- a/src/UI/templates/default/Layout/tpl.alignment_horizontal.html
+++ b/src/UI/templates/default/Layout/tpl.alignment_horizontal.html
@@ -1,4 +1,4 @@
-<div class="c-layout-alignment__horizontal<!-- BEGIN forced --> c-layout-alignment--forced<!-- END forced -->">
+<div class="c-layout-alignment c-layout-alignment--horizontal<!-- BEGIN forced --> c-layout-alignment--nowrap<!-- END forced -->">
 	<!-- BEGIN group -->
 	<div class=c-layout-alignment__group>
 		{CONTENT}
