UI/ViewControl: Pagination with max

--- a/src/UI/templates/default/Input/tpl.vc_pagination.html
+++ b/src/UI/templates/default/Input/tpl.vc_pagination.html
@@ -1,14 +1,12 @@
 <div class="il-viewcontrol il-viewcontrol-pagination l-bar__element" id="{ID}">
     <!-- BEGIN section_part -->
     {LEFT}
-    <div class="dropdown il-viewcontrol-pagination__pages">
-        <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"<!-- BEGIN aria_label_offset --> aria-label="{ARIA_LABEL_OFFSET}"<!-- END aria_label_offset --> aria-haspopup="true" aria-expanded="false" aria-controls="{ID_MENU_OFFSET}">{CONTROL_LABEL_OFFSET} <span class="caret"></span></button>
-        <ul id="{ID_MENU_OFFSET}" class="dropdown-menu">
-            <!-- BEGIN option_offset -->
-            <li>{OPTION_OFFSET}</li>
-            <!-- END option_offset -->
-        </ul>
-    </div>
+    <!-- BEGIN entry -->
+    <!-- BEGIN spacer -->
+    <span class="il-viewcontrol-pagination__spacer">...</span>
+    <!-- END spacer -->
+    {ENTRY}
+    <!-- END entry -->
     {RIGHT}
     <!-- END section_part -->
 
