--- a/src/UI/templates/default/Input/tpl.vc_pagination.html
+++ b/src/UI/templates/default/Input/tpl.vc_pagination.html
@@ -1,13 +1,24 @@
 <div class="il-viewcontrol il-viewcontrol-pagination l-bar__element" id="{ID}">
+
+
     <!-- BEGIN section_part -->
-    {LEFT}
-    <!-- BEGIN entry -->
-    <!-- BEGIN spacer -->
-    <span class="il-viewcontrol-pagination__spacer">...</span>
-    <!-- END spacer -->
-    {ENTRY}
-    <!-- END entry -->
-    {RIGHT}
+    <div class="dropdown il-viewcontrol-pagination__sectioncontrol">
+            <!-- BEGIN selection -->
+                {LEFT}
+                <!-- BEGIN entry -->
+                    <!-- BEGIN spacer -->
+                    <span class="il-viewcontrol-pagination__spacer">...</span>
+                    <!-- END spacer -->
+                    {ENTRY}
+                <!-- END entry -->
+                {RIGHT}
+            <!-- END selection -->
+            <!-- BEGIN input -->
+                {INPUT}
+                {BUTTON}
+            <!-- END input -->
+
+    </div>
     <!-- END section_part -->
 
     <div class="dropdown il-viewcontrol-pagination__num-of-items">
